crates/toml/tests/snapshots/invalid/integer/invalid-hex-02.stderr
TOML parse error at line 1, column 20
  |
1 | invalid-hex-02 = 0xgabba00f1
  |                    ^
invalid hexadecimal number
